[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
clap = { version = "3.2.6", features = ["cargo"] }
env_logger = "0.9.0"
fantoccini = { version = "0.19", default-features = false, features = ["rustls-tls"] }
futures = "0.3.21"
log = "0.4.17"
regex = "1.5.6"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
select = "0.6.0-alpha.1"
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0"
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = "0.1.9"
